--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+os: osx
 language: generic
 
 branches:
@@ -16,38 +16,76 @@ addons:
       - glib
       - docutils
 
-matrix:
+jobs:
   include:
     - compiler: clang
       language: c
-      os: osx
+      osx_image: xcode10
+      env:
+        - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
+        - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
+      before_script:
+        - printenv
+        # Hack to blow away py2
+        - brew link --overwrite python
+      script:
+        # We can't run 'distcheck' or 'syntax-check' because they fail on
+        # macOS, but doing 'install' and 'dist' gives us some useful coverage
+        - mkdir build && cd build
+        - pkg-config --cflags glib-2.0
+        - pkg-config --cflags libcurl
+        - ../autogen.sh --prefix=$(pwd)/install-root && cat config.log && make -j3 && make -j3 install && make -j3 dist
+    - compiler: clang
+      language: c
+      osx_image: xcode10.1
+      env:
+        - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
+        - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
+      before_script:
+        - printenv
+        # Hack to blow away py2
+        - brew link --overwrite python
+      script:
+        # We can't run 'distcheck' or 'syntax-check' because they fail on
+        # macOS, but doing 'install' and 'dist' gives us some useful coverage
+        - mkdir build && cd build
+        - pkg-config --cflags glib-2.0
+        - pkg-config --cflags libcurl
+        - ../autogen.sh --prefix=$(pwd)/install-root && cat config.log && make -j3 && make -j3 install && make -j3 dist
+    - compiler: clang
+      language: c
       osx_image: xcode10.2
       env:
         - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
         - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
       before_script:
+        - printenv
         # Hack to blow away py2
         - brew link --overwrite python
       script:
         # We can't run 'distcheck' or 'syntax-check' because they fail on
         # macOS, but doing 'install' and 'dist' gives us some useful coverage
         - mkdir build && cd build
-        - ../autogen.sh --prefix=$(pwd)/install-root && make -j3 && make -j3 install && make -j3 dist
+        - pkg-config --cflags glib-2.0
+        - pkg-config --cflags libcurl
+        - ../autogen.sh --prefix=$(pwd)/install-root && cat config.log && make -j3 && make -j3 install && make -j3 dist
     - compiler: clang
       language: c
-      os: osx
       osx_image: xcode11.3
       env:
         - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
         - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
       before_script:
+        - printenv
         # Hack to blow away py2
         - brew link --overwrite python
       script:
         # We can't run 'distcheck' or 'syntax-check' because they fail on
         # macOS, but doing 'install' and 'dist' gives us some useful coverage
         - mkdir build && cd build
-        - ../autogen.sh --prefix=$(pwd)/install-root && make -j3 && make -j3 install && make -j3 dist
+        - pkg-config --cflags glib-2.0
+        - pkg-config --cflags libcurl
+        - ../autogen.sh --prefix=$(pwd)/install-root && cat config.log make -j3 && make -j3 install && make -j3 dist
 
 git:
   submodules: true
