--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,14 @@ matrix:
 
 env:
   global:
-    - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
+    - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:/usr/local/sbin:$PATH"
     - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
 
 before_script:
-  # Hack to blow away py2
-  - brew link --overwrite python
+  - brew doctor
+  - brew config
+  - brew info
   - find /usr/local/opt/libffi/lib
-  - brew info --installed --json
 
 script:
   # We can't run 'distcheck' or 'syntax-check' because they fail on
