--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,12 @@ env:
     - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
     - PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig"
 
+before_script:
+  # "update" only upgrades the toolchain, but we must
+  # upgrade the formula too, otherwise the new bits we
+  # installed might conflict
+  - homebrew upgrade
+
 script:
   # We can't run 'distcheck' or 'syntax-check' because they fail on
   # macOS, but doing 'install' and 'dist' gives us some useful coverage
